--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,6 @@
 h1, h2, h3, h4, h5, h6{
     font-family: 400 32px/40px 'Google Sans','Noto Sans','Noto Sans JP','Noto Sans KR',sans-serif;
+    color:#1a73e8;
 }
 body{
     font-family: Roboto, sans-serif;
@@ -7,4 +8,7 @@ body{
 }
 .container{
     max-width: 1400px !important;
+}
+.gray-bg{
+    background-color: #f1f3f4 ;
 }
