the final section

--- a/style/style.css
+++ b/style/style.css
@@ -5,10 +5,12 @@ h1, h2, h3, h4, h5, h6{
 body{
     font-family: Roboto, sans-serif;
     font-size: 1.1rem;
+    padding: 0;
+    margin: 0;
 }
-.container{
+/* .container{
     max-width: 1400px !important;
-}
+} */
 .gray-bg{
     background-color: #f1f3f4 ;
 }
@@ -79,7 +81,7 @@ section .section-title {
     -webkit-transform-style: preserve-3d;
     -ms-transition: 1s;
     -moz-transition: 1s;
-    -moz-transform: perspective(1000px);
+    /* -moz-transform: perspective(1000px); */
     -moz-transform-style: preserve-3d;
     -ms-transform-style: preserve-3d;
     transition: 1s;
@@ -89,8 +91,8 @@ section .section-title {
 
 .frontside {
     position: relative;
-    -webkit-transform: rotateY(0deg);
-    -ms-transform: rotateY(0deg);
+    /* -webkit-transform: rotateY(0deg);
+    -ms-transform: rotateY(0deg); */
     z-index: 2;
     margin-bottom: 30px;
 }
